[lworld] "assert(!is_null(v)) failed: narrow klass value can never be zero" with -Xint and COH

XMLWordPrintable

      The attached test case fails intermittently with -Xint and COH:

      javac --enable-preview --source 25 --add-exports java.base/jdk.internal.value=ALL-UNNAMED --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED TestInterpreter.java && java --enable-preview --add-exports java.base/jdk.internal.value=ALL-UNNAMED --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED -XX:+UnlockExperimentalVMOptions -XX:+UseCompactObjectHeaders -Xint TestInterpreter


      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/chagedor/valhalla2/open/src/hotspot/share/oops/compressedKlass.inline.hpp:52), pid=356848, tid=356898
      # assert(!is_null(v)) failed: narrow klass value can never be zero
      #
      # JRE version: Java(TM) SE Runtime Environment (25.0) (fastdebug build 25-lworld5ea-LTS-2025-08-20-1143349.chagedor...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-lworld5ea-LTS-2025-08-20-1143349.chagedor..., interpreted mode, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x3965ff] CompressedKlassPointers::decode_not_null(unsigned int)+0x2af

            Assignee:
            Coleen Phillimore
            Reporter:
            Christian Hagedorn
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: