8366794: [lworld] "assert(!is_null(v)) failed: narrow klass value can never be zero" with -Xint and COH